--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <!--    <script>-->
 <!--        alert(1);-->
 <!--    </script>-->
-    <script type=text/javascript src="JS/script.js"></script>
+<!--    <script type=text/javascript src="JS/script.js"></script>-->
+        <script type=text/javascript src="JS/21.js"></script>
 </body>
 </html>
