--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>GACHIBASS</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Gachibase</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <p>TAKE IT BOY</p>
-<!--    <script>-->
-<!--        alert(1);-->
-<!--    </script>-->
-    <script type=text/javascript src="JS/script.js"></script>
-<!--        <script type=text/javascript src="JS/21.js"></script>-->
+<div class="box" id="box"></div>
+<button>1</button>
+<button>2</button>
+<button>3</button>
+<button>4</button>
+<button>5</button>
+
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+
+<div class="wrapper">
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+
+</div>
+
+<script src="JS/27.js"></script>
 </body>
 </html>
